--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -13,9 +13,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
-        android:text="Result"
-        android:textSize="40dp"
+        android:text="@string/result"
         android:textColor="#FFFFFF"
+        android:textSize="40dp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -37,9 +38,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="56dp"
-        android:text="Correct answer(s)"
+        android:text="@string/correct_answer_s"
         android:textColor="#FFFFFF"
         android:textSize="30dp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
@@ -48,37 +50,68 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
+        android:layout_marginTop="56dp"
         android:gravity="center"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/correctAnswersText"
+        app:layout_constraintVertical_bias="0.719"
+        tools:layout_editor_absoluteX="0dp">
 
-        >
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
->
-            <ImageButton
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
+            android:layout_margin="10dp"
+            android:gravity="center"
+            android:orientation="vertical">
 
-            </ImageButton>
+            <ImageButton
+                android:id="@+id/restartButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/restart"
+                android:scaleX="0.4"
+                android:scaleY="0.4"
+
+                ></ImageButton>
+
             <TextView
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:text="Restart"
+                android:textColor="#FFFFFF"
+                android:textSize="30dp"
+                android:textStyle="bold">
 
             </TextView>
         </LinearLayout>
+
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            >
+            android:layout_margin="10dp"
+            android:gravity="center"
+
+            android:orientation="vertical">
+
             <ImageButton
+                android:id="@+id/homeButton"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:background="@drawable/home"
+                android:scaleX="0.4"
+                android:scaleY="0.4">
 
             </ImageButton>
+
             <TextView
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:text="Home"
+                android:textColor="#FFFFFF"
+                android:textSize="30dp"
+                android:textStyle="bold">
 
             </TextView>
         </LinearLayout>
