--- a/app/src/main/res/layout/activity_database.xml
+++ b/app/src/main/res/layout/activity_database.xml
@@ -20,7 +20,7 @@
             android:layout_marginTop="16dp"
             android:layout_marginEnd="8dp"
             android:layout_marginRight="8dp"
-            android:text="Question List "
+            android:text="@string/question_list"
             android:textColor="#FFFFFF"
             android:textSize="40dp"
             android:textStyle="bold"
