--- a/app/src/main/res/layout/item_layout.xml
+++ b/app/src/main/res/layout/item_layout.xml
@@ -17,12 +17,12 @@
         android:gravity="center_vertical"
         android:id="@+id/rootView"
         >
+
         <com.google.android.material.circularreveal.CircularRevealLinearLayout
+            android:id="@+id/person_image"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:id="@+id/person_image"
-            android:background="@drawable/me"
-            />
+            android:background="@drawable/me" />
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
