--- a/app/src/main/res/layout/item_layout.xml
+++ b/app/src/main/res/layout/item_layout.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="#fff">
 
 
     <data>
@@ -17,12 +18,12 @@
         android:gravity="center_vertical"
         android:id="@+id/rootView"
         >
-        <com.google.android.material.circularreveal.CircularRevealLinearLayout
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:id="@+id/person_image"
-            android:background="@drawable/me"
-            />
+
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:src="@drawable/me"
+            android:layout_width="60dp"
+            android:layout_height="60dp" />
+
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
