--- a/app/src/main/res/drawable/roundededittext.xml
+++ b/app/src/main/res/drawable/roundededittext.xml
@@ -4,8 +4,6 @@
     android:shape="rectangle" android:padding="10dp">
     <solid android:color="#FFFFFF"/>
     <corners
-        android:bottomRightRadius="20dp"
-        android:bottomLeftRadius="20dp"
-        android:topLeftRadius="20dp"
-        android:topRightRadius="20dp"/>
+        android:radius="30dp"
+        />
 </shape>
