--- a/app/src/main/res/layout/dialogadd.xml
+++ b/app/src/main/res/layout/dialogadd.xml
@@ -4,10 +4,10 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="5dp"
-    android:background="@color/colorAccent">
+    android:background="@color/colorAccent"
+    >
 
     <TextView
-
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
