--- a/app/src/main/res/layout/activity_new_person.xml
+++ b/app/src/main/res/layout/activity_new_person.xml
@@ -10,8 +10,8 @@
 
     <ImageButton
         android:id="@+id/imageview"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="200dp"
+        android:layout_height="300dp"
         android:layout_marginTop="80dp"
         android:background="@drawable/bigimagebutton"
         app:layout_constraintEnd_toEndOf="parent"
@@ -38,8 +38,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="76dp"
-        android:text="Save"
+        android:layout_marginBottom="8dp"
         android:background="@drawable/roundedbutton"
+        android:text="Save"
         android:textColor="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
