--- a/app/src/main/res/layout/activity_new_person.xml
+++ b/app/src/main/res/layout/activity_new_person.xml
@@ -10,8 +10,8 @@
 
     <ImageButton
         android:id="@+id/imageview"
-        android:layout_width="200dp"
-        android:layout_height="300dp"
+        android:layout_width="190dp"
+        android:layout_height="280dp"
         android:layout_marginTop="80dp"
         android:background="@drawable/bigimagebutton"
         app:layout_constraintEnd_toEndOf="parent"
@@ -19,7 +19,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/nameinput"
+        android:id="@+id/nameinputfield"
         android:layout_width="215dp"
         android:layout_height="55dp"
         android:layout_marginTop="52dp"
@@ -45,6 +45,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/nameinput"
+        app:layout_constraintTop_toBottomOf="@+id/nameinputfield"
         app:layout_constraintVertical_bias="0.0" />
 </androidx.constraintlayout.widget.ConstraintLayout>
