--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -21,7 +21,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/imageofperson"
         android:layout_width="193dp"
         android:layout_height="184dp"
         android:layout_marginTop="108dp"
@@ -44,7 +44,7 @@
         android:textColorHint="#999898"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView" />
+        app:layout_constraintTop_toBottomOf="@+id/imageofperson" />
 
     <Button
         android:id="@+id/checkAnswerButton"
