--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -34,7 +34,7 @@
         android:id="@+id/nameInput"
         android:layout_width="199dp"
         android:layout_height="61dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginBottom="96dp"
         android:background="@drawable/roundededittext"
         android:ems="10"
         android:hint="Name"
@@ -42,22 +42,32 @@
         android:paddingLeft="20dp"
         android:paddingRight="20dp"
         android:textColorHint="#999898"
+        app:layout_constraintBottom_toTopOf="@+id/checkAnswerButton"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageofperson" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/checkAnswerButton"
         android:layout_width="148dp"
         android:layout_height="56dp"
+        android:layout_marginBottom="24dp"
         android:background="@drawable/roundedbutton"
         android:text="Check answer"
         android:textColor="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/correctAnswersText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text=""
+        android:textColor="#82FF00"
+        app:layout_constraintBottom_toTopOf="@+id/nameInput"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/nameInput"
-        app:layout_constraintVertical_bias="0.757" />
+        app:layout_constraintTop_toBottomOf="@+id/imageofperson" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
