--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -65,7 +65,7 @@
         android:layout_height="wrap_content"
         android:text=""
         android:textSize="20dp"
-        android:textColor="#82FF00"
+        android:textColor="#FF0000"
         app:layout_constraintBottom_toTopOf="@+id/nameInput"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
