--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -63,7 +63,7 @@
         android:layout_width="0dp"
         android:layout_height="42dp"
         android:gravity="center"
-        android:text="sdf"
+        android:text=""
         android:textColor="#FF0000"
         android:textSize="20dp"
         app:layout_constraintBottom_toTopOf="@+id/checkAnswerButton"
