--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -64,7 +64,7 @@
         android:layout_height="42dp"
         android:gravity="center"
         android:text=""
-        android:textColor="#FF0000"
+        android:textColor="#FFFFFF"
         android:textSize="20dp"
         app:layout_constraintBottom_toTopOf="@+id/checkAnswerButton"
         app:layout_constraintEnd_toEndOf="parent"
