--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -60,8 +60,8 @@
 
     <TextView
         android:id="@+id/correctAnswersText"
-        android:layout_width="0dp"
-        android:layout_height="42dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:gravity="center"
         android:text=""
         android:textColor="#FFFFFF"
