--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -24,10 +24,10 @@
         android:id="@+id/imageofperson"
         android:layout_width="193dp"
         android:layout_height="184dp"
-        android:layout_marginTop="108dp"
+        android:layout_marginTop="68dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/whoisthis"
+        app:layout_constraintTop_toBottomOf="@+id/scoreoutof"
         app:srcCompat="@drawable/anders" />
 
     <EditText
@@ -70,5 +70,16 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/nameInput" />
+
+    <TextView
+        android:id="@+id/scoreoutof"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="3/5"
+        android:textColor="#FFFFFFFF"
+        android:textSize="20dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/whoisthis" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
