--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -47,8 +47,8 @@
         android:layout_marginRight="16dp"
         android:layout_marginBottom="68dp"
         android:background="@drawable/transparentbutton"
-        android:text="Questions"
-        android:textColor="#FFFFFF"
+        android:text="@string/questions"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
