--- a/app/src/main/res/layout/activity_new_person.xml
+++ b/app/src/main/res/layout/activity_new_person.xml
@@ -25,7 +25,7 @@
         android:layout_marginTop="20dp"
         android:background="@drawable/roundededittext"
         android:ems="10"
-        android:hint="Name"
+        android:hint="@string/name"
         android:inputType="textPersonName"
         android:paddingLeft="20dp"
         android:paddingRight="20dp"
@@ -40,8 +40,8 @@
         android:layout_marginTop="76dp"
         android:layout_marginBottom="8dp"
         android:background="@drawable/roundedbutton"
-        android:text="Save"
-        android:textColor="#FFFFFF"
+        android:text="@string/save"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
