--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -14,7 +14,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
         android:text="@string/result"
-        android:textColor="#FFFFFF"
+        android:textColor="@color/white"
         android:textSize="40dp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -27,8 +27,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
         android:text="1"
+        android:textColor="@color/white"
         android:textSize="100dp"
-        android:textColor="#FFFFFF"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/resultsText" />
@@ -39,7 +39,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="56dp"
         android:text="@string/correct_answers"
-        android:textColor="#FFFFFF"
+        android:textColor="@color/white"
         android:textSize="30dp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -78,8 +78,8 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Restart"
-                android:textColor="#FFFFFF"
+                android:text="@string/restart"
+                android:textColor="@color/white"
                 android:textSize="30dp"
                 android:textStyle="bold">
 
@@ -91,7 +91,6 @@
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
             android:gravity="center"
-
             android:orientation="vertical">
 
             <ImageButton
@@ -108,8 +107,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:text="Home"
-                android:textColor="#FFFFFF"
+                android:text="@string/home"
+                android:textColor="@color/white"
                 android:textSize="30dp"
                 android:textStyle="bold">
 
