--- a/app/src/main/res/layout/dialogadd.xml
+++ b/app/src/main/res/layout/dialogadd.xml
@@ -16,7 +16,7 @@
         android:text="@string/add_new_person"
         android:textSize="25sp"
         android:textStyle="bold"
-        android:textColor="@android:color/white"/>
+        android:textColor="@color/white"/>
 
 
     <ImageButton
@@ -44,7 +44,7 @@
     <Button
         android:id="@+id/button"
         android:background="@drawable/roundedbutton_primarycolor"
-        android:textColor="@android:color/white"
+        android:textColor="@color/white"
         android:layout_marginTop="5dp"
         android:layout_width="150dp"
         android:layout_gravity="center"
