--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,6 @@
     <color name="colorPrimary">#252d49</color>
     <color name="colorPrimaryDark">#252d49</color>
     <color name="colorAccent">#12B1E2</color>
+    <color name="white">#FFFFFF</color>
+    <color name="grey">#999898</color>
 </resources>
