--- a/app/src/main/res/layout/item_layout.xml
+++ b/app/src/main/res/layout/item_layout.xml
@@ -9,7 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
-        app:cardBackgroundColor="#34929292"
+        app:cardBackgroundColor="@color/slightlyTransparentGrey"
         app:cardCornerRadius="30dp"
         app:cardElevation="0dp"
         app:cardPreventCornerOverlap="true"
