--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#12B1E2</color>
     <color name="white">#FFFFFF</color>
     <color name="grey">#999898</color>
+    <color name="slightlyTransparentGrey">#34929292</color>
 </resources>
