--- a/app/src/main/res/layout/activity_name.xml
+++ b/app/src/main/res/layout/activity_name.xml
@@ -5,36 +5,46 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorPrimary"
-    tools:context=".activities.QuizActivity">
+    tools:context=".activities.NameActivity">
 
 
     <TextView
-        android:id="@+id/whoisthis"
+        android:id="@+id/welcomeText1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:text="@string/who_is_this"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="16dp"
+        android:text="Welcome!!"
         android:textColor="@color/white"
-        android:textSize="40dp"
+        android:textSize="50dp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.113"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/imageofperson"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:layout_marginTop="68dp"
+    <TextView
+        android:id="@+id/welcomeText2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="10dp"
+        android:text="Please write your name below"
+        android:textColor="@color/white"
+        android:textSize="25dp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.287"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/scoreoutof"
-        app:srcCompat="@drawable/anders" />
+        app:layout_constraintTop_toBottomOf="@+id/welcomeText1" />
 
     <EditText
-        android:id="@+id/nameInput"
+        android:id="@+id/nameInputSharedPreferences"
         android:layout_width="200dp"
         android:layout_height="60dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="200dp"
         android:background="@drawable/roundededittext"
         android:ems="10"
         android:hint="@string/name"
@@ -43,43 +53,22 @@
         android:paddingRight="20dp"
         android:textColorHint="@color/grey"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageofperson" />
+        app:layout_constraintTop_toBottomOf="@+id/welcomeText1" />
 
     <Button
-        android:id="@+id/checkAnswerButton"
+        android:id="@+id/saveNameSharedPreferences"
         android:layout_width="150dp"
         android:layout_height="55dp"
         android:layout_marginBottom="16dp"
         android:background="@drawable/roundedbutton"
-        android:text="@string/check_answer"
+        android:text="@string/save"
         android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <TextView
-        android:id="@+id/correctAnswersText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:text=""
-        android:textColor="@color/white"
-        android:textSize="20dp"
-        app:layout_constraintBottom_toTopOf="@+id/checkAnswerButton"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/nameInput" />
-
-    <TextView
-        android:id="@+id/scoreoutof"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="3/5"
-        android:textColor="@color/white"
-        android:textSize="20dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/whoisthis" />
-
+        app:layout_constraintTop_toBottomOf="@+id/nameInputSharedPreferences"
+        app:layout_constraintVertical_bias="0.751" />
 </androidx.constraintlayout.widget.ConstraintLayout>
